--- a/frontend/www/pages/students.html
+++ b/frontend/www/pages/students.html
@@ -1,27 +1,33 @@
 <div class="page" data-name="students">
+    <!-- Navbar -->
     <div class="navbar">
-        <div class="navbar-inner">
+        <div class="navbar-bg"></div>
+        <div class="navbar-inner sliding">
             <div class="title">Students</div>
+            <div class="right">
+                <a
+                        href="#"
+                        id="add_student_btn"
+                        class="button button-fill icon-only"
+                        style="display:none"
+                >
+                    <i class="icon f7-icons">plus_circle_fill</i>
+                </a>
+            </div>
         </div>
     </div>
 
-    <div class="toolbar tabbar toolbar-bottom">
-        <div class="toolbar-inner">
-            <a href="/users/" class="tab-link">Users</a>
-            <a href="/students/" class="tab-link tab-link-active">Students</a>
-            <a href="/stream/" class="tab-link">Stream</a>
-            <a href="/reports/" class="tab-link">Reports</a>
-        </div>
-    </div>
 
+
+    <!-- Page Content -->
     <div class="page-content">
         <!-- Header -->
-        <div class="block-header flex">
+        <div class="block-header flex justify-content-space-between align-items-center">
             <div class="block-title">Students</div>
             <a href="#" class="button button-small button-outline" id="btn-toggle-form">+ Add</a>
         </div>
 
-        <!-- Add Student Form -->
+        <!-- Add/Edit Student Form -->
         <div class="block hide" id="add-student-form">
             <div class="list no-hairlines-md">
                 <ul>
@@ -67,7 +73,7 @@
 
         <!-- Students List -->
         <div class="block-title">Students List</div>
-        <div class="list media-list">
+        <div class="list list-outline-ios list-strong-ios list-dividers-ios">
             <ul id="students-ul"></ul>
         </div>
     </div>
