--- a/frontend/www/pages/students/add.html
+++ b/frontend/www/pages/students/add.html
@@ -24,6 +24,12 @@
                 </li>
                 <li class="item-content item-input">
                     <div class="item-inner">
+                        <div class="item-title item-label">Parent Email</div>
+                        <div class="item-input-wrap"><input type="email" id="st-parent"></div>
+                    </div>
+                </li>
+                <li class="item-content item-input">
+                    <div class="item-inner">
                         <div class="item-title item-label">Photo</div>
                         <div class="item-input-wrap"><input type="file" id="st-photo" accept="image/*"></div>
                     </div>
