--- a/frontend/www/pages/users/list.html
+++ b/frontend/www/pages/users/list.html
@@ -1,10 +1,10 @@
-<div class="page" data-name="students">
+<div class="page" data-name="users">
     <div class="navbar">
         <div class="navbar-bg"></div>
         <div class="navbar-inner sliding">
-            <div class="title">Students</div>
+            <div class="title">Users</div>
             <div class="right">
-                <a href="#" id="add_student_btn" class="link icon-only">
+                <a href="#" id="add_user_btn" class="link icon-only">
                     <i class="icon f7-icons">plus_circle_fill</i>
                 </a>
             </div>
@@ -17,7 +17,7 @@
             <div class="ptr-arrow"></div>
         </div>
         <div class="list media-list list-outline list-dividers">
-            <ul id="students-list"></ul>
+            <ul id="users-list"></ul>
         </div>
     </div>
 </div>
