--- a/frontend/www/pages/stream.html
+++ b/frontend/www/pages/stream.html
@@ -1,31 +1,20 @@
 <div class="page" data-name="stream">
     <div class="navbar">
-        <div class="navbar-inner">
-            <div class="title">Stream</div>
+        <div class="navbar-bg"></div>
+        <div class="navbar-inner sliding">
+            <div class="title">Live Stream</div>
+            <div class="right">
+                <a href="#" id="toggle-session-btn" class="link color-blue">
+                    <i class="icon f7-icons">play_circle_fill</i>
+                    <span>Start</span>
+                </a>
+            </div>
         </div>
     </div>
 
-    <div class="page-content">
-        <div class="block">
-            <div class="row">
-                <div class="col">
-                    <a href="#" class="button button-fill" id="btn-start-session">Start Session</a>
-                </div>
-                <div class="col">
-                    <a href="#" class="button button-outline color-red" id="btn-stop-session">Stop Session</a>
-                </div>
-            </div>
-
-            <div class="list simple-list">
-                <ul>
-                    <li>Current Session ID: <span id="cur-session-id">—</span></li>
-                    <li>Status: <span id="cur-session-status">idle</span></li>
-                </ul>
-            </div>
-
-            <div class="block">
-                <img id="stream-img" class="stream-img" alt="Live stream">
-            </div>
+    <div class="page-content no-padding no-margin">
+        <div id="stream-container">
+            <img id="live-stream" />
         </div>
     </div>
 </div>
