--- a/frontend/www/index.html
+++ b/frontend/www/index.html
@@ -16,7 +16,7 @@
     <meta name="theme-color" content="#fff">
     <meta name="format-detection" content="telephone=no">
     <meta name="msapplication-tap-highlight" content="no">
-    <title>Sanad</title>
+    <title>SANAD</title>
 
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="mobile-web-app-capable" content="yes">
